# performance_practice

./: .gitignore  README.md
c++_concurrency_in_action/: CMakeLists.txt
c++_concurrency_in_action/src/: 1_1.cpp  2_1.cpp  2_7.cpp  2_8.cpp  3_1.cpp  3_2.cpp  3_5.cpp  3_6.cpp  3_7.cpp  3_9.cpp  4_1.cpp  4_13.cpp  4_5.cpp  4_7.cpp
concurrent_map/: CMakeLists.txt  bench.sh  concurrent_map.cpp  concurrent_map.hpp  phmap_test.cpp
eigensolvers/: conjugate_gradient.py  lanczos_iter.py  lobpcg.py  profile.html  profile.json  rayleigh_ritz.py
einsum/: .gitignore  CMakeLists.txt
einsum/include/einsum/: contraction.hpp  einsum.hpp  exceptions.hpp  parser.hpp  utils.hpp
einsum/test/: CMakeLists.txt  test_contraction.cpp  test_einsum.cpp  test_parser.cpp
leetcode/53_max_subarray/: CMakeLists.txt  README.md  benchmark.cpp  max_subarray.cpp  max_subarray.hpp
linear_alg/: .gitignore  CMakeLists.txt  README.md  einsum_mat.py  einsum_poc.py  einsum_poc2.py  matmul_lc.py
linear_alg/include/: tensor.hpp
linear_alg/include/linalg/: lstsq.hpp  qr.hpp
linear_alg/test/: CMakeLists.txt  make_test_data.py  test_simple.cpp
matrix_mult/: Makefile  README.md  benchmark.cpp
molssi_gpu_1/02_basics/: Makefile  hello.cu
molssi_gpu_1/03_cuda_prog_model/: Makefile  cpu_printer.cu  gpu_printer_grid_stride_loop.cu  gpu_printer_hierarchy.cu  gpu_printer_mb_global.cu  gpu_printer_mb_local.cu  gpu_printer_monolithic.cu  gpu_printer_sb.cu  gpu_sum_vector.cu
my_stl/: CMakeLists.txt  README.md
my_stl/include/: vector.hpp
my_stl/test/: CMakeLists.txt  test_vector.cpp
ppc/: README.md
ppc/ch2/: .gitignore  Makefile  utils.hpp  v0.cpp  v1.cpp  v2.cpp  v3.cpp  v3a  v3a.cpp
ppc/ch4/: Makefile  example  example.cu  helper.h  v0.cu  v1.cu
ppc_open2025/cp1/: cp.cc
ppc_open2025/cp2a/: cp.cc
ppc_open2025/cp2c/: cp.cc
ppc_open2025/cp3a/: .gitignore  cp.cc  cp_tile.cc
ppc_open2025/cp3b/: cp.cc
sparse_mat/: CMakeLists.txt
sparse_mat/include/: sparse_mat.hpp
sparse_mat/src/: sparse_mat.cpp
sparse_mat/test/: CMakeLists.txt  test_vec.cpp
torch_compile/: PERFORMANCE_SUMMARY.md  README_complex_options.md  benchmark_absolute_performance.py  complex_advanced.py  complex_alternatives.py  complex_compile.py
url_downloader/: CMakeLists.txt  url_downloader.cpp
