cmake_minimum_required(VERSION 3.20)

project(cpp_concurrency_in_action)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-g -fanalyzer")

add_executable(1_1 src/1_1.cpp)
add_executable(2_1 src/2_1.cpp)
add_executable(2_7 src/2_7.cpp)
add_executable(2_8 src/2_8.cpp)
add_executable(3_1 src/3_1.cpp)
add_executable(3_2 src/3_2.cpp)
add_executable(3_5 src/3_5.cpp)
# add_executable(3_6 src/3_6.cpp)
add_executable(3_7 src/3_7.cpp)
add_executable(4_5 src/4_5.cpp)
# add_executable(4_7 src/4_7.cpp)
add_executable(4_13 src/4_13.cpp)